replaced main div container with element main

--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,6 @@ body {
 ul {
   list-style: none;
 }
-header {
-  width: 100% !important;
-}
 .navbar {
   min-height: 70px;
   margin-bottom: 0;
@@ -137,6 +134,18 @@ header {
 }
 .navbar-default .navbar-collapse {
   border: none;
+}
+header {
+  width: 100% !important;
+  position: relative;
+}
+.header_contacts {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+.header_contacts .fa {
+  color: #fff;
 }
 .header_name {
   font-size: .2em;
