--- a/css/styles.less
+++ b/css/styles.less
@@ -36,10 +36,6 @@ ul {
 	list-style: none;
 }
 
-header {
-	width: 100% !important;
-}
-
 .navbar {
 	min-height: 70px;
 	margin-bottom: 0;
@@ -151,6 +147,21 @@ header {
 
 .navbar-default .navbar-collapse {
 	border: none;
+}
+
+header {
+	width: 100% !important;
+	position: relative;
+}
+
+.header_contacts {
+	position: absolute;
+	bottom: 0;
+	text-align: center;
+	.fa {
+		// font-size: 60px;
+		color: #fff;
+	}
 }
 
 .header_name {
