--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,7 @@ ul {
   text-decoration: underline;
 }
 .navbar-default {
-  background: url('../images/2.jpg');
-  background-size: cover;
+  background-color: #0b283a;
 }
 .navbar-default .navbar-nav > li > a {
   color: #fff;
@@ -134,6 +133,23 @@ ul {
 }
 .navbar-default .navbar-collapse {
   border: none;
+}
+.navbar-scrolled {
+  background: linear-gradient(to bottom, rgba(11, 40, 58, 0.9), rgba(255, 255, 255, 0));
+  color: #000;
+}
+.navbar-scrolled .navbar-toggle {
+  border: 2px solid #0b283a;
+  margin-top: 15px;
+}
+.navbar-scrolled .navbar-toggle .icon-bar {
+  background-color: #0b283a;
+}
+.navbar-scrolled .navbar-toggle:hover {
+  background-color: #0b283a;
+}
+.navbar-scrolled .navbar-toggle:hover .icon-bar {
+  background-color: #fff;
 }
 header {
   width: 100% !important;
