--- a/css/styles.less
+++ b/css/styles.less
@@ -103,8 +103,7 @@ ul {
 }
 
 .navbar-default {
-	background: url('../images/2.jpg');
-	background-size: cover;
+	background-color: #0b283a;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -147,6 +146,25 @@ ul {
 
 .navbar-default .navbar-collapse {
 	border: none;
+}
+
+.navbar-scrolled {
+	background: linear-gradient(to bottom, rgba(11, 40, 58, 0.9), rgba(255, 255, 255, 0));
+	color: #000;
+}
+
+.navbar-scrolled .navbar-toggle {
+	border: 2px solid #0b283a;
+	margin-top: 15px;
+	.icon-bar {
+		background-color: #0b283a;
+	}
+	&:hover {
+		background-color: #0b283a;
+		.icon-bar {
+			background-color: #fff;
+		}
+	}
 }
 
 header {
@@ -251,7 +269,9 @@ header {
 	text-transform: uppercase;
 	font-weight: 700;
 }
-
+// .about {
+// 	padding-top: 70px !important;
+// }
 .section_title hr {
 	margin: 0;
 	height: 2px;
@@ -265,10 +285,6 @@ header {
 		margin: 0;
 		@media (max-width: 767px) {padding: 10px 0;}
 	}
-}
-
-.about {
-
 }
 
 .info {
