--- a/css/styles.less
+++ b/css/styles.less
@@ -126,6 +126,7 @@ ul {
 	.navbar-brand_title {
 		font-family: 'Russo One', sans-serif;
 		font-size: 1.3em;
+		text-transform: uppercase;
 	}
 	&:hover {color: #fff;}
 }
@@ -139,7 +140,7 @@ ul {
 	&:hover {
 		background-color: #fff;
 		.icon-bar {
-			background-color: #000;
+			background-color: #0b283a;
 		}
 	}
 }
@@ -149,8 +150,10 @@ ul {
 }
 
 .navbar-scrolled {
-	background: linear-gradient(to bottom, rgba(11, 40, 58, 0.9), rgba(255, 255, 255, 0));
-	color: #000;
+	background: -webkit-linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
+  background: -o-linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
+  background: -moz-linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
+	background: linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
 }
 
 .navbar-scrolled .navbar-toggle {
@@ -489,7 +492,7 @@ header {
 		text-decoration: none;
 		cursor: pointer;
 	}
-	.mySlides {
+	.slides {
 		display: none;
 		width: auto;
 	}
