--- a/css/styles.less
+++ b/css/styles.less
@@ -83,6 +83,9 @@ ul {
 	a {
 		color: #000;
 	}
+	.lang {
+	  -webkit-text-fill-color: #000;
+	}
 }
 
 .navbar-white .nav>li>a:hover {
@@ -170,15 +173,21 @@ ul {
 	}
 }
 
+.lang {
+	z-index: 100000;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 0 30px;
+	line-height: 70px;
+	font-weight: 400;
+	-webkit-text-fill-color: #fff;
+	font-size: 1em;
+}
+
 header {
 	width: 100% !important;
 	position: relative;
-}
-
-.header_contacts {
-	position: absolute;
-	bottom: 0;
-	text-align: center;
 }
 
 .header_name {
