improved navbar-nav

--- a/css/styles.less
+++ b/css/styles.less
@@ -157,6 +157,16 @@ ul {
   background: -o-linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
   background: -moz-linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
 	background: linear-gradient(to bottom, rgba(11, 40, 58, 0.7), rgba(255, 255, 255, 0));
+	ul {
+		background-color: #0b283a;
+		border: 2px solid #fff;
+		color: #fff;
+	}
+}
+
+.navbar-scrolled .navbar-nav > .active > a, .navbar-fixed-top .navbar-nav > .open > a {
+	color: #fff;
+	font-size: 1.5em;
 }
 
 .navbar-scrolled .navbar-toggle {
