--- a/css/styles.less
+++ b/css/styles.less
@@ -36,6 +36,28 @@ ul {
 	list-style: none;
 }
 
+#overlay{
+  position:fixed;
+  z-index:11199999;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background:rgba(0,0,0,0.9) url("../images/ajax-loader.gif") no-repeat center;
+  transition: 1s 0.4s;
+}
+
+#loader {
+background:url("../images/ajax-loader.gif") no-repeat center;
+height: 100px;
+width: 100px;
+position: fixed;
+left: 50%;
+top: 10%;
+z-index: 200000;
+margin: -25px 0 0 -25px;
+}
+
 .navbar {
 	min-height: 70px;
 	margin-bottom: 0;
