move source files to "app" folder

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -482,7 +482,7 @@ header {
     .preview-inner {
       position: relative;
   		height: 260px;
-      background-image: url('../images/FireShot/FireShot1.png');
+      background-image: url('../images/FireShot1.png');
       background-size: cover;
   		box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
       &:hover {
