add styles for list and button

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -582,6 +582,45 @@ header {
 	}
 }
 
+#recipes {
+	color: #fff;
+	text-align: left;
+}
+
+.portfolio__section {
+	padding: 1rem 0;
+}
+
+.portfolio__section hr {
+	margin: .2rem 0;
+}
+
+.portfolio__section-text {
+	width: max-content;
+}
+
+.portfolio__visit-btn {
+	margin: 3rem 0;
+	display: block;
+	width: max-content;
+	border: .1rem solid #fff;
+	padding: .5rem 2rem;
+	background-color: #fff;
+	color: #000;
+	cursor: pointer;
+	&:hover {
+		border: .1rem solid #000;
+		text-decoration: none;
+		color: #3a3b3d;
+	}
+}
+
+.portfolio__list {
+	padding-top: .5rem;
+	list-style: circle;
+	list-style-position: inside;
+}
+
 table {
 	border-collapse: separate;
 	width: 100%;
