remove ".slides" class rules

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -552,10 +552,6 @@ header {
 		text-decoration: none;
 		cursor: pointer;
 	}
-	.slides {
-		display: none;
-		width: auto;
-	}
 
 	.prev,
 	.next {
@@ -586,7 +582,7 @@ header {
 	}
 }
 
-#recipes {
+.modal-content {
 	color: #fff;
 	text-align: left;
 }
